--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -355,5 +355,17 @@
       "default_title": "Default Title",
       "sticky_add_to_cart": "Quick add to cart bar"
     }
+  },
+  "sections": {
+    "smart_product": {
+      "in_stock": "In stock",
+      "pre_order": "Pre-order",
+      "out_of_stock": "Out of stock",
+      "add_to_cart": "Add to cart",
+      "pre_order_button": "Pre-order",
+      "out_of_stock_button": "Out of stock",
+      "left_count": "Left: {{ count }}",
+      "sale_badge": "SALE"
+    }
   }
 }
